# OOP_PR6_Question

./: CMakeLists.txt  README.md  main.cpp
includes/: Exam.h  MultipleChoiceQuestion.h  Question.h  SingleChoiceQuestion.h
src/: Exam.cpp  MultipleChoiceQuestion.cpp  Question.cpp  SingleChoiceQuestion.cpp
